src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void cv_namedWindow_0(const char* winname, int flags);
extern "C" __declspec(dllexport) void cv_destroyWindow_0(const char* winname);
extern "C" __declspec(dllexport) void cv_destroyAllWindows_0();
extern "C" __declspec(dllexport) const char* cv_currentUIFramework_0();
extern "C" __declspec(dllexport) int cv_startWindowThread_0();
extern "C" __declspec(dllexport) int cv_waitKeyEx_0(int delay);
extern "C" __declspec(dllexport) int cv_waitKey_0(int delay);
extern "C" __declspec(dllexport) int cv_pollKey_0();
extern "C" __declspec(dllexport) void cv_imshow_0(const char* winname, void* mat);
extern "C" __declspec(dllexport) void cv_resizeWindow_0(const char* winname, int width, int height);
extern "C" __declspec(dllexport) void cv_resizeWindow_1(const char* winname, cv::Size size);
extern "C" __declspec(dllexport) void cv_moveWindow_0(const char* winname, int x, int y);
extern "C" __declspec(dllexport) void cv_setWindowProperty_0(const char* winname, int prop_id, double prop_value);
extern "C" __declspec(dllexport) void cv_setWindowTitle_0(const char* winname, const char* title);
extern "C" __declspec(dllexport) double cv_getWindowProperty_0(const char* winname, int prop_id);
extern "C" __declspec(dllexport) cv::Rect cv_getWindowImageRect_0(const char* winname);
extern "C" __declspec(dllexport) cv::Rect cv_selectROI_0(const char* windowName, void* img, bool showCrosshair, bool fromCenter, bool printNotice);
extern "C" __declspec(dllexport) cv::Rect cv_selectROI_1(void* img, bool showCrosshair, bool fromCenter, bool printNotice);
extern "C" __declspec(dllexport) void cv_selectROIs_0(const char* windowName, void* img, void* boundingBoxes, bool showCrosshair, bool fromCenter, bool printNotice);
extern "C" __declspec(dllexport) int cv_getTrackbarPos_0(const char* trackbarname, const char* winname);
extern "C" __declspec(dllexport) void cv_setTrackbarPos_0(const char* trackbarname, const char* winname, int pos);
extern "C" __declspec(dllexport) void cv_setTrackbarMax_0(const char* trackbarname, const char* winname, int maxval);
extern "C" __declspec(dllexport) void cv_setTrackbarMin_0(const char* trackbarname, const char* winname, int minval);
extern "C" __declspec(dllexport) void cv_addText_0(void* img, const char* text, cv::Point org, const char* nameFont, int pointSize, cv::Scalar color, int weight, int style, int spacing);
extern "C" __declspec(dllexport) void cv_displayOverlay_0(const char* winname, const char* text, int delayms);
extern "C" __declspec(dllexport) void cv_displayStatusBar_0(const char* winname, const char* text, int delayms);