src/OpenCV5Sharp/Generated/NativeMethods.Highgui.cs

// Copyright (c) 2026 Qourex. Licensed under Apache-2.0.
// See LICENSE file in the project root for full license information.
// AUTO-GENERATED FILE — DO NOT EDIT MANUALLY. Generated by generator.py.

#pragma warning disable CS8600, CS8601, CS8602, CS8603, CS8604, CS8625

using System;
using System.Runtime.InteropServices;

namespace OpenCV5Sharp
{
    internal static partial class NativeMethods
    {
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_namedWindow_0([MarshalAs(UnmanagedType.LPUTF8Str)] string winname, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_destroyWindow_0([MarshalAs(UnmanagedType.LPUTF8Str)] string winname);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_destroyAllWindows_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_currentUIFramework_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_startWindowThread_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_waitKeyEx_0(int delay);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_waitKey_0(int delay);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_pollKey_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_imshow_0([MarshalAs(UnmanagedType.LPUTF8Str)] string winname, IntPtr mat);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_resizeWindow_0([MarshalAs(UnmanagedType.LPUTF8Str)] string winname, int width, int height);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_resizeWindow_1([MarshalAs(UnmanagedType.LPUTF8Str)] string winname, Size size);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_moveWindow_0([MarshalAs(UnmanagedType.LPUTF8Str)] string winname, int x, int y);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_setWindowProperty_0([MarshalAs(UnmanagedType.LPUTF8Str)] string winname, int prop_id, double prop_value);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_setWindowTitle_0([MarshalAs(UnmanagedType.LPUTF8Str)] string winname, [MarshalAs(UnmanagedType.LPUTF8Str)] string title);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_getWindowProperty_0([MarshalAs(UnmanagedType.LPUTF8Str)] string winname, int prop_id);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Rect cv_getWindowImageRect_0([MarshalAs(UnmanagedType.LPUTF8Str)] string winname);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Rect cv_selectROI_0([MarshalAs(UnmanagedType.LPUTF8Str)] string windowName, IntPtr img, [MarshalAs(UnmanagedType.U1)] bool showCrosshair, [MarshalAs(UnmanagedType.U1)] bool fromCenter, [MarshalAs(UnmanagedType.U1)] bool printNotice);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Rect cv_selectROI_1(IntPtr img, [MarshalAs(UnmanagedType.U1)] bool showCrosshair, [MarshalAs(UnmanagedType.U1)] bool fromCenter, [MarshalAs(UnmanagedType.U1)] bool printNotice);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_selectROIs_0([MarshalAs(UnmanagedType.LPUTF8Str)] string windowName, IntPtr img, IntPtr boundingBoxes, [MarshalAs(UnmanagedType.U1)] bool showCrosshair, [MarshalAs(UnmanagedType.U1)] bool fromCenter, [MarshalAs(UnmanagedType.U1)] bool printNotice);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_getTrackbarPos_0([MarshalAs(UnmanagedType.LPUTF8Str)] string trackbarname, [MarshalAs(UnmanagedType.LPUTF8Str)] string winname);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_setTrackbarPos_0([MarshalAs(UnmanagedType.LPUTF8Str)] string trackbarname, [MarshalAs(UnmanagedType.LPUTF8Str)] string winname, int pos);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_setTrackbarMax_0([MarshalAs(UnmanagedType.LPUTF8Str)] string trackbarname, [MarshalAs(UnmanagedType.LPUTF8Str)] string winname, int maxval);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_setTrackbarMin_0([MarshalAs(UnmanagedType.LPUTF8Str)] string trackbarname, [MarshalAs(UnmanagedType.LPUTF8Str)] string winname, int minval);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_addText_0(IntPtr img, [MarshalAs(UnmanagedType.LPUTF8Str)] string text, Point org, [MarshalAs(UnmanagedType.LPUTF8Str)] string nameFont, int pointSize, Scalar color, int weight, int style, int spacing);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_displayOverlay_0([MarshalAs(UnmanagedType.LPUTF8Str)] string winname, [MarshalAs(UnmanagedType.LPUTF8Str)] string text, int delayms);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_displayStatusBar_0([MarshalAs(UnmanagedType.LPUTF8Str)] string winname, [MarshalAs(UnmanagedType.LPUTF8Str)] string text, int delayms);
    }
}
